--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,38 @@
-== README
+## SponsorPay Mobile Offers API - Ruby Developer Challenge
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Simple rails 4 app that fetches and displays offers using [SponsorPay's Mobile Offers API](http://developer.sponsorpay.com/content/ios/offer-wall/offer-api/).
 
-Things you may want to cover:
+### Ruby version
 
-* Ruby version
+Developed on ruby-2.1.2, though ruby >= 1.9.3 should work just fine. *Note: To change the ruby version edit the .ruby-version file.*
 
-* System dependencies
+### Rails version
 
-* Configuration
+Rails 4.1.1
 
-* Database creation
+### Dependencies
 
-* Database initialization
+* Ruby
+* Bundler
+* RVM - for ruby switching (or some other tool that uses .ruby-version for switching ruby versions)
 
-* How to run the test suite
+### Setting up
 
-* Services (job queues, cache servers, search engines, etc.)
+* Clone/download the code.
+* Change into the directory and run `bundle install`
 
-* Deployment instructions
+NOTE: This app requires a valid SponsorPay API key. You may update it in the main application config file (`config/application.rb`) or have it available in the rails environment variables using the key `SP_API_KEY`.
 
-* ...
+### How to run the site
 
+In development, if you've updated the API key in `config/application.rb`, simply run `rails server`. If not, run `SP_API_KEY=YOUR_API_KEY rails server`.
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+If running in production, probably best to save the environment variable in your server's configuration using the key `SP_API_KEY`.
+
+### Running tests
+
+If you've updated the API key in `config/application.rb`, simply run `rake test`. If not, run `SP_API_KEY=YOUR_API_KEY rake test`.
+
+You can also test the offers api directly using a rake task that's been provided: `rake sp:fetch_offers` or `SP_API_KEY=YOUR_API_KEY rake sp:fetch_offers`.
+
+To use different parameters for the rake task, edit the rake file directly at `lib/tasks/sp.rake`.
